--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -47,7 +47,7 @@ Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción
 \section{Arquitecturas Q}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Características generales(susi)} \label{caracteristicasQ}
+\subsection{Características generales} \label{caracteristicasQ}
 
 \begin{itemize}
 \item Tiene \textbf{8 registros} de uso general de 16 bits:\textbf{ R0..R7}.
