--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -28,17 +28,23 @@ La \ALU, recibe su nombre de las siglas en inglés de \textit{Arithmetic and Log
 
 La memoria es un conjunto de celdas numeradas. La numeración de cada celda la identifica inequívocamente por lo cual a esta numeración se le llama dirección. En cada celda de la memoria se pueden almacenar datos o instrucciones en forma de cadenas binarias y este contenido puede leerse y modificarse. En la memoria es donde se alojan los programas que luego serán ejecutados.\\
 
-\ojo{Buses: son los encargados de}{El bus de sistema es el encargado de} transferir los datos entre los componentes de la computadora.La unidad de control al pedir un contenido de una dirección de memoria lo hace a través del bus, y similarmente mismo cuando desea escribir en memoria.
+\ojo{Buses: son los encargados de}{El bus de sistema es el encargado de} transferir los datos entre los componentes de la computadora \ojo{.La unidad de control al pedir un contenido de una dirección de memoria lo hace a través del bus, y similarmente mismo cuando desea escribir en memoria.}{, y lo hace a partir de que la \UC\ pide la lectura o escritura de celdas de memoria o puertos de entrada/salida}.
 
 \subsection{Ejecución de un programa}
 
-La función de una computadora es la ejecución de programas. Los programas se encuentran almacenados en memoria y consisten en una sucesión de instrucciones que posee orden. La CPU es quien se encarga de ejecutar dichas instrucciones a través de un ciclo denominado ciclo instrucciones. Para ser almacenadas en memoria, las instrucciones deben codificarse en cadenas binarias (secuencias de ceros y unos) que no son legibles para las personas pero que la UC puede interpretar y traducir en acciones. Por eso para saber de qué instrucción se trata, y cuales son los valores o celdas de memoria que debería consultar o usar, la cpu utiliza la UC, que tomando bit por bit interpreta la cadena binaria y verificando los códigos únicos de cada instrucción o modos de direccionamiento, sabe qué instrucción y con qué valores debería ejecutar. La ejecución de instrucciones se divide en tres etapas importantes, fech - decode - execute.
+La función de una computadora es la ejecución de programas. Los programas se encuentran almacenados en memoria y consisten en una secuencia de instrucciones y es la \UC\ es quien se encarga de ejecutar dichas instrucciones implementando un \textbf{\ciclo}. Para ser almacenadas en memoria, las instrucciones deben codificarse en cadenas binarias (secuencias de ceros y unos) que no son legibles para las personas pero son tales que la \UC\ las puede interpretar y traducir en acciones. Por eso para saber de qué instrucción se trata, y cuáles son los valores o \ojo{celdas de memoria que debería consultar o usar}{variables (celdas de memoria o registros) que estan involucrados}, la \UC\ toma el código máquina de la instrucción y verifica los códigos de operación y modos de direccionamiento. La ejecución de instrucciones se divide en tres etapas importantes: \ojo{fech - decode - execute}{\begin{enumerate}
+\item \BI
+\item \DI
+\item \EI
+\end{enumerate}}
+\graf[6cm]{ciclo}{\ciclo}
 
-Al principio de cada ciclo de ejecución, durante el fech de instrucción la CPU busca una instrucción que se encuentra en alguna parte de la memoria. Para saber donde esta dicha instrucción la CPU contiene un registro llamado contador de programa (PC), que tiene la dirección de la próxima instrucción a buscar. La CPU a través del bus lee la instrucción, y luego incrementa el valor contenido en PC; así podrá buscar la siguiente instrucción en la secuencia luego de terminar con la actual. La instrucción leida que está en la forma de cadena binaria se carga dentro de otro registro de la CPU, llamado registro de instrucción (IR).
 
-Durante la decodificacion la UC determina que significa la cadena binaria.
+Al principio de cada \ciclo\ojo{, durante el fech de instrucción la CPU busca una instrucción que se encuentra en alguna parte de la memoria. Para saber donde esta dicha instrucción la CPU contiene un registro llamado contador de programa (PC), que tiene la dirección de la próxima instrucción a buscar. La CPU a través del bus lee la instrucción, y luego incrementa el valor contenido en PC; así podrá buscar la siguiente instrucción en la secuencia luego de terminar con la actual.}{se lleva a cabo la \BI\ durante la cual se leen las celdas que contienen el \codmaq\ de la instrucción y para lo cual se utiliza el \PC\ que mantiene la dirección de la siguiente instrucción a ejecutar}.
+\ojo{La}{El código máquina de la} instrucción leída \ojo{}{que está en la forma de cadena binaria} se carga dentro de otro registro de la CPU, llamado registro de instrucción (IR).\\
 
-Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción, es decir, realiza lo que la instrucción dice que debe hacer con sus argumentos, modificando la memoria o los registros como resultado final y el ciclo vuelve a comenzar hasta que el programa termine.
+Durante la \DI, la \UC\ determina que \ojo{significa la cadena binaria. Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción, es decir, realiza lo que la instrucción dice que debe hacer con sus argumentos, hasta que el programa termine.}{operación se debe llevar a cabo, y finalmente durante la \EI la \UC realiza el efecto esperado para esa operación, buscando los operandos y } modificando la memoria o los registros como resultado final y el ciclo vuelve a comenzar
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Arquitecturas Q}
@@ -48,35 +54,38 @@ Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Modos de direccionamiento}
-
+Los siguientes son los modos de direccionamiento implementados en la Arquitectura Q.
 \begin{enumerate}
 
-\item \textbf{Inmediato}
-Codigo de modo de direccionamiento: 000000
-Este modo de direccionamiento es un valor que será utilizado como modo origen pero nunca como modo destino ya que en el no pueden guardarse datos.
+\item \textbf{Inmediato} \ojo{}{Representa un operando que denota un valor constante}\ojo{Este modo de direccionamiento es un valor que será utilizado como modo origen pero nunca como modo destino ya que en el no pueden guardarse datos.}{Es importante notar que este modo direccionamiento es admitido en el operando origen pero no el operando destino}
 
 Ejemplos:
-\textbf{0x0000} representa el modo de direccionamiento inmediato cuyo valor es cero.
-\textbf{0x000F} representa el modo de direccionamiento inmediato cuyo valor es 15.
+\begin{itemize}
+\item \textbf{0x0000} denota el modo de direccionamiento inmediato cuyo valor es cero.
+\item \textbf{0x000F} denota el modo de direccionamiento inmediato cuyo valor es 15.
+\end{itemize}
+
 
 \item \textbf{Directo}
-Codigo de modo de direccionamiento: 001000
-Este modo de direccionamiento representa una direccion de memoria o de puertos que será utilizado como modo origen pero nunca como modo destino ya que en el no pueden guardarse datos.
+\ojo{Este modo de direccionamiento representa}{Con este modo de direccionamiento se denota un operando alojado en} una dirección de memoria o de puertos\ojo{que será utilizado como modo origen pero nunca como modo destino ya que en el no pueden guardarse datos.}{no va!}
 
 Ejemplos:
-\textbf{[0x0000]} representa el modo de direccionamiento directo cuyo valor se encuentra en la celda de memoria que identifica uniquevocamente a la dirección \textbf{0x0000}, es decir 0.
-\textbf{[0x000F]} representa el modo de direccionamiento directo cuyo valor se encuentra en la celda de memoria que identifica uniquevocamente a la dirección \textbf{0x000F}, es decir 15.
+\begin{itemize}
+\item \textbf{[0x0000]} denota \ojo{el modo de direccionamiento directo}{un operando} cuyo valor se encuentra en la celda de memoria \ojo{que identifica inequívocamente a la dirección}{cuya dirección es} \textbf{0x0000}.
+\item \textbf{[0x000F]} denota  \ojo{el modo de direccionamiento directo}{un operando} cuyo valor se encuentra en la celda de memoria\ojo{que identifica inequívocamente a la dirección}{cuya dirección es} \textbf{0x000F}.
+\end{itemize}
+
 
 \item \textbf{Indirecto}
-Codigo de modo de direccionamiento: 011000
-Este modo de direccionamiento representa una direccion de memoria o de puertos que será utilizado como modo origen pero nunca como modo destino ya que en el no pueden guardarse datos.
+\ojo{Este modo de direccionamiento representa una dirección de memoria o de puertos que será utilizado como modo origen pero nunca como modo destino ya que en el no pueden guardarse datos.}{Con este modo de direccionamiento se denota un operando alojado en una celda de memoria cuya dirección está almacenada en otra celda de memoria.}
 
 Ejemplos:
-\textbf{[[0x0000]]} representa el modo de direccionamiento indirecto cuyo valor se encuentra en la celda de memoria cuya dirección esta guardada como dato en la celda de memoria que identifica uniquevocamente a la dirección \textbf{0x0000}, es decir 0.
-\textbf{[[0x000F]]} representa el modo de direccionamiento indirecto cuyo valor se encuentra en la celda de memoria cuya dirección esta guardada como dato en la celda de memoria que identifica uniquevocamente a la dirección \textbf{0x000F}, es decir 15.
+\begin{itemize}
+\item \textbf{[[0x0000]]} denota \ojo{el modo de direccionamiento indirecto} {un operando} cuyo valor se encuentra en la celda de memoria cuya dirección esta guardada como dato en la celda de memoria \ojo{que identifica inequívocamente a la dirección}{cuya dirección es} \textbf{0x0000}
+\item \textbf{[[0x000F]]} denota \ojo{el modo de direccionamiento indirecto} {un operando} cuyo valor se encuentra en la celda de memoria cuya dirección esta guardada como dato en la celda de memoria \ojo{que identifica inequívocamente a la dirección}{cuya dirección es} \textbf{0x000F}
+\end{itemize}
 
 \item \textbf{Registro}
-Codigo de modo de direccionamiento: 100rrr 
 Donde "rrr" es una cadena binaria que puede tomar los valores desde 000 hasta 111 para identificar según el numero decimal que representen los diferentes ocho registros R0..R7.
 
 Ejemplos:
@@ -84,7 +93,6 @@ Ejemplos:
 \textbf{R7} representa el modo de direccionamiento registro cuyo valor se encuentra en el registro \textbf{R7}.
 
 \item \textbf{RegistroIndirecto}
-Codigo de modo de direccionamiento: 110rrr 
 Donde "rrr" es una cadena binaria que puede tomar los valores desde 000 hasta 111 para identificar según el numero decimal que representen los diferentes ocho registros R0..R7.
 
 Ejemplos:
@@ -93,6 +101,14 @@ Ejemplos:
 
 \end{enumerate}
 
+\tabla{|l|l|l|}{
+\textbf{Modo}       &  \textbf{Codificación}\\ \hline\hline
+Inmediato   &  000000\\ \hline
+Directo     &  001000\\ \hline
+Indirecto   &  011000\\ \hline
+Registro    &  100rrr\footnote{rrr es una codificación (en 3 bits) del número de registro}\\ \hline
+Registro indirecto &  110rrr\footnote{rrr es una codificación (en 3 bits) del número de registro}\\ \hline
+}{Tabla de códigos de los modos de direccionamiento}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Repertorio de instrucciones}
