--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -25,3 +25,9 @@ Tuvieron que ser solicitadas además extensiones al equipo de desarrolladores de
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Ejemplos de uso}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Trabajo Futuro}
+
+\ojo{Incorporar push y pop/ mejorar el editor de programas Qi/Entrada y salida: modelar dispositivos como el teclado, etc}{}
